# GameEngine

./: .clangd  .gitignore  CMakeLists.txt  GameEngine.sln  GameEngine.vcxproj  GameEngine.vcxproj.filters  README.md
GameEngine/x64/Debug/: GameEngine.exe.recipe  GameEngine.ilk  vc143.idb
GameEngine/x64/Debug/GameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameEngine.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: catppuccin.h
src/: Main.cpp  glad.c
